--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -114,27 +114,49 @@ body {
 
 #header-container {
   height: 100vh;
-  width: 20vw;
+  width: 15vw;
   position: fixed;
   top: 0;
   left: 0;
 }
 #header-container #header-content {
+  height: 100vh;
   display: flex;
   flex-flow: column;
-  align-items: center;
   justify-content: space-evenly;
+}
+#header-container #header-content a {
+  padding-left: 4vw;
+  padding-right: 4vw;
+}
+#header-container #header-content .emphasize {
+  background: #16DE69;
+  color: #041C0E;
+  padding-top: 1vw;
+  padding-bottom: 1vw;
+  border-bottom-right-radius: 1em;
+  border-top-right-radius: 1em;
+}
+#header-container #header-content #header-home-container {
+  padding-left: 1vw;
+}
+#header-container #header-content #header-home-container a {
+  padding-left: unset;
+  padding-right: unset;
+  font-weight: 700;
+  font-size: 2.25em;
 }
 #header-container #header-image-container {
   position: absolute;
-  right: -5vw;
+  right: -7vw;
   top: 0;
   height: 100%;
-  width: 5vw;
+  width: 7vw;
 }
-#header-container #header-image-container img {
+#header-container #header-image-container svg {
   width: 100%;
   height: 100%;
+  fill: #041C0E;
 }
 
 /*# sourceMappingURL=home.css.map */
