--- a/src/main/resources/static/styles/home.scss
+++ b/src/main/resources/static/styles/home.scss
@@ -2,25 +2,48 @@
 
 #header-container {
   height: 100vh;
-  width: 20vw;
+  width: 15vw;
   position: fixed;
   top: 0;
   left: 0;
   #header-content {
+    height: 100vh;
     display: flex;
     flex-flow: column;
-    align-items: center;
     justify-content: space-evenly;
+
+    a {
+      padding-left: 4vw;
+      padding-right: 4vw;
+    }
+    .emphasize {
+      background: $accent;
+      color: $dark;
+      padding-top: 1vw;
+      padding-bottom: 1vw;
+      border-bottom-right-radius: 1em;
+      border-top-right-radius: 1em;
+    }
+    #header-home-container {
+      padding-left: 1vw;
+      a {
+        padding-left: unset;
+        padding-right: unset;
+        font-weight: 700;
+        font-size: 2.25em;
+      }
+    }
   }
   #header-image-container {
     position: absolute;
-    right: -5vw;
+    right: -7vw;
     top: 0;
     height: 100%;
-    width: 5vw;
-    img {
+    width: 7vw;
+    svg {
       width: 100%;
       height: 100%;
+      fill: $dark;
     }
   }
 }
