--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,14 +15,22 @@
         <div id="header-home-container" class="dark">
             <a href="/" class="dark">ConDelu Meals</a>
         </div>
-        <a class="dark">Lorem Ipsum</a>
-        <a class="dark">Lorem Ipsum</a>
-        <a class="dark">Lorem Ipsum</a>
-        <a class="dark">Lorem Ipsum</a>
-        <a class="dark">Lorem Ipsum</a>
+        <a class="dark emphasize" href="/">Order</a>
+        <a class="dark" href="/">View Orders</a>
+        <a class="dark" href="/">Menu</a>
+        <a class="dark" href="/">Meal Plans</a>
+        <a class="dark" href="/">TSA 1</a>
+        <a class="dark" href="/">TSA 2</a>
+        <a class="dark emphasize" href="/">Account</a>
     </div>
     <div id="header-image-container">
-        <img alt="header-seperation" src="/images/headerspacer.svg"/>
+        <svg viewBox="0 0 132.29166 132.29166" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                    id="path20"
+                    style="fill-opacity:1;stroke:none;stroke-width:2.64636;stroke-linecap:round;stroke-opacity:1"
+                    d="M 0,0 V 132.29166 H 132.29166 C 110.24309,110.24309 88.194836,88.194997 88.194616,77.170482 88.194386,66.145967 110.24266,66.145993 110.24288,55.121699 110.2431,44.097405 88.19442,22.048589 66.145832,0 Z" />
+        </svg>
+
     </div>
 </div>
 
