Horizontal scrolling, early scroll bar.

--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -107,3 +107,25 @@ body {
   background: $light;
   color: $dark;
 }
+
+
+body {
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: $accent;
+  border-radius: 0.25em;
+}
+::-webkit-resizer {
+  display: none;
+}
+::-webkit-scrollbar-button {
+  display: none;
+}
