--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,12 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/styles/home.css">
+    <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
+    <script src="/js/lenis_config.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
 <body class="light">
 
@@ -30,8 +36,27 @@
                     style="fill-opacity:1;stroke:none;stroke-width:2.64636;stroke-linecap:round;stroke-opacity:1"
                     d="M 0,0 V 132.29166 H 132.29166 C 110.24309,110.24309 88.194836,88.194997 88.194616,77.170482 88.194386,66.145967 110.24266,66.145993 110.24288,55.121699 110.2431,44.097405 88.19442,22.048589 66.145832,0 Z" />
         </svg>
+    </div>
+</div>
+
+<div id="site-content">
+
+    <div id="hero-content">
+        <h1>Where premium healthy meals never preempt convenience.</h1>
+        <div id="hero-proceed-container">
+            <h3>What Do We Offer?</h3>
+            <i class="fas fa-arrow-right"></i>
+        </div>
+    </div>
+
+    <div id="approaches-container">
 
     </div>
+
+    <div id="sample-container">
+
+    </div>
+
 </div>
 
 </body>
