--- a/src/main/resources/static/styles/home.scss
+++ b/src/main/resources/static/styles/home.scss
@@ -14,16 +14,24 @@
     justify-content: space-evenly;
 
     a {
-      padding-left: 4vw;
-      padding-right: 4vw;
+      padding: 1vw 4vw;
+      border-bottom-right-radius: 1em;
+      border-top-right-radius: 1em;
+      transition: border 0.5s;
+      border: 1px solid transparent;
+    }
+    a:hover {
+      border: 1px solid $accent;
     }
     .emphasize {
       background: $accent;
       color: $dark;
-      padding-top: 1vw;
-      padding-bottom: 1vw;
-      border-bottom-right-radius: 1em;
-      border-top-right-radius: 1em;
+
+      transition: transform 0.5s;
+      z-index: 6;
+    }
+    .emphasize:hover {
+      transform: translateX(1vw);
     }
     #header-home-container {
       padding-left: 1vw;
@@ -31,7 +39,11 @@
         padding-left: unset;
         padding-right: unset;
         font-weight: 700;
-        font-size: 2.25em;
+        font-size: 1.25em;
+        border: unset;
+      }
+      a:hover {
+        border: unset;
       }
     }
   }
@@ -41,6 +53,7 @@
     top: 0;
     height: 100%;
     width: 7vw;
+    z-index: 5;
     svg {
       width: 100%;
       height: 100%;
@@ -57,7 +70,7 @@
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  padding-left: 22vw;
+  padding-left: 27vw;
   z-index: 1;
 
   #hero-content {
@@ -74,6 +87,10 @@
       padding-top: 40vh;
       width: 100%;
       text-align: center;
+      position: relative;
+      i {
+        padding-left: 1em;
+      }
     }
   }
 
