--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,8 +44,7 @@
     <div id="hero-content">
         <h1>Where premium healthy meals never preempt convenience.</h1>
         <div id="hero-proceed-container">
-            <h3>What Do We Offer?</h3>
-            <i class="fas fa-arrow-right"></i>
+            <h3>What do we offer? <i class="fas fa-arrow-right"></i></h3>
         </div>
     </div>
 
