--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -197,6 +197,21 @@ body {
   fill: #041C0E;
 }
 
+#parallax-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+#parallax-image img {
+  width: 100%;
+  height: 100%;
+}
+
 #site-content {
   height: 100vh;
   width: fit-content;
@@ -204,17 +219,19 @@ body {
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  padding-left: 27vw;
   z-index: 1;
+  background: none;
 }
 #site-content #hero-content {
   width: 68vw;
-  padding-left: 5vw;
+  height: 100vh;
+  padding-left: 32vw;
   padding-right: 5vw;
+  background: #C6FFDE;
 }
 #site-content #hero-content h1 {
   font-size: 3.5em;
-  padding-top: 5vh;
+  padding-top: 15vh;
 }
 #site-content #hero-content #hero-proceed-container {
   padding-top: 40vh;
@@ -224,12 +241,53 @@ body {
 }
 #site-content #hero-content #hero-proceed-container i {
   padding-left: 1em;
+  color: #16DE69;
 }
 #site-content #approaches-container {
   width: 70vw;
+  height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  background: none;
+  z-index: 2;
+}
+#site-content #approaches-container .approaches-tile {
+  width: 18vw;
+  min-height: 60vh;
+  max-height: 90vh;
+  overflow: clip;
+  text-align: center;
+  z-index: 4;
+}
+#site-content #approaches-container .approaches-tile .approaches-tile-title {
+  background: rgba(198, 255, 222, 0.8);
+  border-radius: 1em;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+#site-content #approaches-container .approaches-tile .approaches-tile-content {
+  background: rgba(198, 255, 222, 0.8);
+  border-radius: 1em;
+  padding: 1em;
+}
+#site-content #approaches-container::before {
+  content: "";
+  display: block;
+  background: rgba(198, 255, 222, 0.4);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
 }
 #site-content #sample-container {
   width: 70vw;
+  height: 100vh;
+  background: #C6FFDE;
+  z-index: 2;
 }
 
 /*# sourceMappingURL=home.css.map */
