--- a/src/main/resources/static/styles/home.scss
+++ b/src/main/resources/static/styles/home.scss
@@ -63,6 +63,22 @@
 }
 
 
+#parallax-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
 #site-content {
   height: 100vh;
   width: fit-content;
@@ -70,17 +86,20 @@
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  padding-left: 27vw;
+  //padding-left: 27vw;
   z-index: 1;
+  background: none;
 
   #hero-content {
     width: 100vw - 22vw - 10vw;
-    padding-left: 5vw; //22 for spacing from the header, 3 for readability
+    height: 100vh;
+    padding-left: 5vw + 27vw; //22 for spacing from the header, 3 for readability
     padding-right: 5vw;
+    background: $light;
 
     h1 {
       font-size: 3.5em;
-      padding-top: 5vh;
+      padding-top: 15vh;
     }
 
     #hero-proceed-container {
@@ -90,15 +109,59 @@
       position: relative;
       i {
         padding-left: 1em;
+        color: $accent;
       }
     }
   }
 
+
   #approaches-container {
     width: 70vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    background: none;
+    z-index: 2;
+
+    .approaches-tile {
+      width: 18vw;
+      min-height: 60vh;
+      max-height: 90vh;
+      overflow: clip;
+      text-align: center;
+      z-index: 4;
+
+      .approaches-tile-title {
+        background: transparentize($light, 0.2);
+        border-radius: 1em;
+        padding: 1em;
+        margin-bottom: 1em;
+      }
+      .approaches-tile-content {
+        background: transparentize($light, 0.2);
+        border-radius: 1em;
+        padding: 1em;
+      }
+    }
+  }
+  #approaches-container::before {
+    content: "";
+    display: block;
+    background: transparentize($light, 0.6);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
   }
 
   #sample-container {
     width: 70vw;
+    height: 100vh;
+    background: $light;
+    z-index: 2;
   }
 }
