--- a/src/main/resources/static/styles/home.scss
+++ b/src/main/resources/static/styles/home.scss
@@ -66,7 +66,7 @@
 #parallax-image {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   z-index: -1;
   top: 0;
   left: 0;
