Created sample bar graph

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,7 +82,30 @@
     </div>
 
     <div id="sample-container">
-
+        <h1>How'd You Like A Sample?</h1>
+        <div id="sample-bar-container">
+            <div class="sample-bar bar-left">
+                <div class="sample-bar-image-container">
+                    <img src="https://cdn.ttgtmedia.com/rms/onlineimages/404_error-h.png" alt="sample option image.">
+                </div>
+                <h2>Lorem Ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="sample-bar bar-center">
+                <div class="sample-bar-image-container">
+                    <img src="https://cdn.ttgtmedia.com/rms/onlineimages/404_error-h.png" alt="sample option image.">
+                </div>
+                <h2>Lorem Ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="sample-bar bar-right">
+                <div class="sample-bar-image-container">
+                    <img src="https://cdn.ttgtmedia.com/rms/onlineimages/404_error-h.png" alt="sample option image.">
+                </div>
+                <h2>Lorem Ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
     </div>
 
 </div>
