--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -288,6 +288,66 @@ body {
   height: 100vh;
   background: #C6FFDE;
   z-index: 2;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+#site-content #sample-container h1 {
+  width: 100%;
+  padding-top: 5vh;
+  padding-bottom: 15vh;
+  text-align: center;
+}
+#site-content #sample-container #sample-bar-container {
+  width: 100%;
+  flex-grow: 2;
+  display: flex;
+  flex-flow: row;
+  align-items: end;
+  justify-content: center;
+}
+#site-content #sample-container #sample-bar-container .sample-bar {
+  width: 33%;
+  -moz-border-radius-topleft: 1em;
+  -moz-border-radius-topright: 1em;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
+  padding: 1em;
+  text-align: center;
+}
+#site-content #sample-container #sample-bar-container .sample-bar .sample-bar-image-container {
+  width: 80%;
+  height: 30vh;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 2.333vw;
+}
+#site-content #sample-container #sample-bar-container .sample-bar .sample-bar-image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#site-content #sample-container #sample-bar-container .sample-bar h2 {
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+}
+#site-content #sample-container #sample-bar-container .bar-left {
+  height: 80%;
+  background: rgba(22, 222, 105, 0.8);
+}
+#site-content #sample-container #sample-bar-container .bar-center {
+  height: 100%;
+  background: #16DE69;
+}
+#site-content #sample-container #sample-bar-container .bar-right {
+  height: 60%;
+  background: rgba(22, 222, 105, 0.6);
+}
+#site-content #sample-container #sample-bar-container .bar-right p {
+  visibility: hidden;
 }
 
 /*# sourceMappingURL=home.css.map */
