Created layout for the rest of the home screen. Created transitions. Created review area. Created interaction area. Began experimenting with animations.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -52,8 +52,6 @@
         </div>
     </div>
 
-
-
     <div id="approaches-container">
         <div class="approaches-tile">
             <div class="approaches-tile-title">
@@ -107,6 +105,69 @@
             </div>
         </div>
     </div>
+
+    <div id="transition-lighttodark">
+        <svg viewbox="0 0 100 100" preserveAspectRatio="none"><path style="stroke:none;fill-opacity:1;" d="M 0,0 L 0,100 L 100,50 L 0,0"/></svg>
+    </div>
+
+    <div id="top-ratings-display" class="dark">
+        <!-- Future: add a system to retrieve recent 5-star reviews and display them. -->
+        <h2 id="ratings-title" class="dark">Ratings</h2>
+        <div class="ratings-container">
+            <div class="rating-tile dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="rating-tile dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="ratings-container">
+            <div class="rating-tile dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="rating-tile dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="ratings-container">
+            <div class="rating-tile dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="rating-tile dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="interaction-suggestion-menu">
+        <h1 class="dark">Interested?</h1>
+        <br>
+        <a href="/">Order</a>
+        <a href="/">Create Account</a>
+    </div>
+
+    <div id="menu-start" class="dark">
+        <h1 class="dark" id="menu-title">Menu</h1>
+    </div>
+</div>
+
+<div id="continued-menu" class="dark">
+
+</div>
+
+<div id="footer-transition" class="dark">
+    <svg viewbox="0 0 100 100" preserveAspectRatio="none">
+        <path style="stroke:none;fill-opacity:1;" d="M 0,100 L 100,100 L 50,0 L 0,100"/>
+    </svg>
+</div>
+
+<div id="footer" class="light">
 
 </div>
 
