--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -221,6 +221,7 @@ body {
   align-items: center;
   z-index: 1;
   background: none;
+  transform: scaleY(1.01);
 }
 #site-content #hero-content {
   width: 68vw;
@@ -348,6 +349,98 @@ body {
 }
 #site-content #sample-container #sample-bar-container .bar-right p {
   visibility: hidden;
+}
+#site-content #transition-lighttodark {
+  width: 20vw;
+  height: 100vh;
+  background: #041C0E;
+  transform: scalex(1.01);
+}
+#site-content #transition-lighttodark svg {
+  width: 100%;
+  height: 100%;
+  fill: #C6FFDE;
+}
+#site-content #top-ratings-display {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 5vw;
+  padding-right: 10vw;
+}
+#site-content #top-ratings-display #ratings-title {
+  writing-mode: vertical-lr;
+  -ms-writing-mode: tb-rl;
+  transform-origin: center;
+  transform: rotate(180deg);
+}
+#site-content #top-ratings-display .ratings-container {
+  width: 20vw;
+  height: 80vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  align-items: center;
+}
+#site-content #top-ratings-display .ratings-container .rating-tile {
+  height: 25vh;
+  width: 15vw;
+  border: 1px solid #16DE69;
+  border-radius: 1em;
+  padding: 1em;
+  text-align: center;
+  overflow: clip;
+}
+#site-content #interaction-suggestion-menu {
+  width: 35vw;
+  height: 80vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(4, 28, 14, 0.8);
+  padding-top: 20vh;
+}
+#site-content #interaction-suggestion-menu h1 {
+  background: none;
+}
+#site-content #interaction-suggestion-menu a {
+  background: #16DE69;
+  border-radius: 1em;
+  padding: 1em;
+  color: #041C0E;
+}
+#site-content #menu-start {
+  width: 100vw;
+  height: 100vh;
+}
+#site-content #menu-start h1 {
+  width: 100%;
+  text-align: center;
+  padding-top: 10vh;
+  background: none;
+}
+
+#continued-menu {
+  width: 100vw;
+  min-height: 100vh;
+}
+
+#footer-transition {
+  width: 100vw;
+  height: 30vw;
+}
+#footer-transition svg {
+  fill: #C6FFDE;
+  width: 100%;
+  height: 100%;
+}
+
+#footer {
+  width: 100vw;
+  height: 20vw;
 }
 
 /*# sourceMappingURL=home.css.map */
