--- a/src/main/resources/static/styles/home.scss
+++ b/src/main/resources/static/styles/home.scss
@@ -89,6 +89,7 @@
   //padding-left: 27vw;
   z-index: 1;
   background: none;
+  transform: scaleY(1.01);
 
   #hero-content {
     width: 100vw - 22vw - 10vw;
@@ -157,6 +158,7 @@
     left: 0;
     z-index: 3;
   }
+
 
   #sample-container {
     width: 70vw;
@@ -227,4 +229,105 @@
       }
     }
   }
+
+
+  #transition-lighttodark {
+    width: 20vw;
+    height: 100vh;
+    background: $dark;
+    transform: scalex(1.01);
+    svg {
+      width: 100%;
+      height: 100%;
+      fill: $light;
+    }
+  }
+
+
+  #top-ratings-display {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-left: 5vw;
+    padding-right: 10vw;
+    #ratings-title {
+      writing-mode: vertical-lr;
+      -ms-writing-mode: tb-rl;
+      transform-origin: center;
+      transform: rotate(180deg);
+    }
+    .ratings-container {
+      width: 20vw;
+      height: 80vh;
+      display: flex;
+      flex-flow: column;
+      justify-content: space-between;
+      align-items: center;
+      .rating-tile {
+        height: 25vh;
+        width: 15vw;
+        border: 1px solid $accent;
+        border-radius: 1em;
+        padding: 1em;
+        text-align: center;
+        overflow: clip;
+      }
+    }
+  }
+
+
+  #interaction-suggestion-menu {
+    width: 35vw;
+    height: 80vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: transparentize($dark, 0.2);
+    padding-top: 20vh;
+    h1 {
+      background: none;
+    }
+    a {
+      background: $accent;
+      border-radius: 1em;
+      padding: 1em;
+      color: $dark;
+    }
+  }
+
+
+  #menu-start {
+    width: 100vw;
+    height: 100vh;
+    h1 {
+      width: 100%;
+      text-align: center;
+      padding-top: 10vh;
+      background: none;
+    }
+  }
+}
+
+#continued-menu {
+  width: 100vw;
+  min-height: 100vh;
+}
+
+
+#footer-transition {
+  width: 100vw;
+  height: 30vw;
+  svg {
+    fill: $light;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+#footer {
+  width: 100vw;
+  height: 20vw;
 }
