--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
-    <script src="/js/lenis_config.js"></script>
+    <script src="/js/animations.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
@@ -46,16 +46,18 @@
 <div id="site-content">
 
     <div id="hero-content">
-        <h1>Where premium healthy meals never preempt convenience.</h1>
+        <h1 class="hero-text-anim">Where premium healthy meals never preempt convenience.</h1>
         <div id="hero-proceed-container">
-            <h3>What do we offer? <i class="fas fa-arrow-right"></i></h3>
+            <button>View Our Menu</button>
+            <h3 class="hero-scrolltext-anim light-nobg">Or learn more about us</h3>
+            <i class="fas fa-arrow-right"></i>
         </div>
     </div>
 
     <div id="approaches-container">
         <div class="approaches-tile">
             <div class="approaches-tile-title">
-                <h2>Lorem Ipsum</h2>
+                <h2 class="approaches-title-anim">Lorem Ipsum</h2>
             </div>
             <div class="approaches-tile-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -63,7 +65,7 @@
         </div>
         <div class="approaches-tile">
             <div class="approaches-tile-title">
-                <h2>Lorem Ipsum</h2>
+                <h2 class="approaches-title-anim">Lorem Ipsum</h2>
             </div>
             <div class="approaches-tile-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -71,7 +73,7 @@
         </div>
         <div class="approaches-tile">
             <div class="approaches-tile-title">
-                <h2>Lorem Ipsum</h2>
+                <h2 class="approaches-title-anim">Lorem Ipsum</h2>
             </div>
             <div class="approaches-tile-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -80,7 +82,7 @@
     </div>
 
     <div id="sample-container">
-        <h1>How'd You Like A Sample?</h1>
+        <h1 class="sample-title-anim">How'd You Like A Sample?</h1>
         <div id="sample-bar-container">
             <div class="sample-bar bar-left">
                 <div class="sample-bar-image-container">
@@ -145,12 +147,6 @@
         </div>
     </div>
 
-    <div id="interaction-suggestion-menu">
-        <h1 class="dark">Interested?</h1>
-        <br>
-        <a href="/">Order</a>
-        <a href="/">Create Account</a>
-    </div>
 
     <div id="menu-start" class="dark">
         <div id="menu-title-container">
@@ -159,7 +155,7 @@
     </div>
 </div>
 
-<div id="continued-menu" class="dark">
+<div id="redirect-section" class="dark">
 
 </div>
 
